syntax = "proto3";

service RpcBackend {
  rpc SaveLocalPlugin (RpcSaveLocalPluginRequest) returns (RpcSaveLocalPluginResponse);
}

message RpcSaveLocalPluginRequest {
  string path = 1;
}
message RpcSaveLocalPluginResponse {
  string stdout_file_path = 1;
  string stderr_file_path = 2;
}